repaired speakers gap on some browsers

--- a/css/speakers.css
+++ b/css/speakers.css
@@ -58,7 +58,7 @@
 }
 
 .profile__photo {
-    width: 466px;
+    width: 100%;
     height: 500px;
     background-position: center;
     position: relative;
@@ -77,13 +77,13 @@
 }
 
 .profile__photo::after {
-        content: "";
-        background: var(--overlay);
-        position: absolute;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
+    content: "";
+    background: var(--overlay);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
 
 .profile {
@@ -108,4 +108,3 @@
     bottom: 20px;
     left: 62px;
 }
-
